--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #F4CE01;
-    --secondary-color: #0F0F0B;
+    --primary-color: rgb(193, 225, 171);
+    --secondary-color: rgb(0, 0, 0);
 }
 
 * {
@@ -89,11 +89,18 @@ body {
     background-color: #fff59d;
     width: 100%;
     height: 70px;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
     padding: 10px 0;
     box-shadow: 1px 1px 5px var(--secondary-color);
     margin: 10px;
     font: inherit;
+    border: 2px solid black;
+    text-align: center;
+}
+
+#newItem::placeholder {
+    text-align: center; 
 }
 
 .todo_new_item > input{
@@ -102,7 +109,7 @@ body {
     width: 80%;
     outline: none;
     font: inherit;
-}
+    text-align: center;
 
 .todo_new_item > input::placeholder {
     font-style: italic;
